--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-eframe = "0.31.0"
-egui = "0.31.0"
-egui_plot = "0.31.0"
+eframe = "0.32.1"
+egui = "0.32.1"
+egui_plot = "0.33.0"
 rumqttc = "0.24.0"
 log = "0.4"
 serde = { version = "1.0", features = ["derive"] }
@@ -19,3 +19,5 @@ rand = "0.9"
 chrono = "0.4.40"
 crossbeam-channel = "0.5"
 dotenv = "0.15"
+thiserror = "1.0"
+base64 = "0.21"
