--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 */idea/
+data/*
