--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "AndroidServer"
-version = "0.1.2"
+name = "SenseHub"
+version = "0.1.3"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -16,8 +16,11 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 env_logger = "0.11.6"
 rand = "0.9"
-chrono = "0.4.40"
+chrono = "0.4.38"
 crossbeam-channel = "0.5"
 dotenv = "0.15"
 thiserror = "1.0"
 base64 = "0.21"
+
+duckdb = { version = "1.3.0", features = ["bundled"] }
+toml = "0.8"
